# libretto_universitario

./: CMakeLists.txt  Doxyfile.cfg  README.md
include/: Progressivo.hpp  Studente.hpp  StudenteErasmus.hpp
src/: Progressivo.cpp  Studente.cpp  StudenteErasmus.cpp  main.cpp
test/: Tests.cpp
